# ahlelele-ahlelas

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  INSTALL.md  LANGUAGE_SPEC.md  LICENSE  PROJECT_INFO.md  QUICK_START.md  README.md  build.bat  build.sh
examples/: calculator.ahl  fibonacci.ahl  hello_world.ahl  stack_operations.ahl
include/: ast.hpp  bytecode.hpp  codegen.hpp  compiler.hpp  lexer.hpp  parser.hpp  token.hpp  vm.hpp
src/: codegen.cpp  compiler.cpp  lexer.cpp  main.cpp  parser.cpp  vm.cpp
